assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Merriweather');
@import url('https://fonts.googleapis.com/css?family=Lobster');

* {
  margin: 0;
  padding: 0;
  border: none;
}
  
body, html{
  font-family: Merriweather, serif;
  font-weight: 300;
}

/* NAVBAR */
#header-color{
  background-color: #a32020;
  overflow: auto;
}

#navigation {
  font-size: 110%;
  letter-spacing: 3px;
}

#navigation, #logo {
  line-height: 75px;
}

#navigation li {
  float: right;
  list-style-type: none;
  margin-right: 30px;
}

#navigation a {
  text-decoration: none;
  text-align: center;
  color: #f7e2e2;
}

#navigation a:hover {
  font-weight: bold;
  color: #20A3A3;
}

.active {
  border-bottom: 2px solid #20A3A3;
}

/* logo style */
#logo {
  font-family: Lobster;
  letter-spacing: 5px;
  float: left;
  margin-left: 30px;
  color: #f7e2e2;
}

#logo span {
  color: #20A3A3;
}

/* SECTION 1 */
#landing-img {
  height: 700px;
  width: 100%;
  background: url(../images/landing-img.jpeg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  box-shadow: 0px 5px 5px rgba(58, 47, 47, 0.7);
  margin-bottom: 100px; /*for distance between sections*/
}

#landing-img-text {
  font-size: 150%;
  font-family: Lobster;
  letter-spacing: 4px;
  color: #f7e2e2;

  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 50px;
  padding-right: 50px;

  background-color: rgba(58, 47, 47, 0.7);
  box-shadow: 10px 10px 5px 12px rgba(58, 47, 47, 0.7);
  bottom: 180px;
  right: 20%;

  position: absolute;
}

/* SECTION 2 */
/*Landing cards */
.section-card {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 100px;
}

#card {
  width: 585px;
  margin: 20px;
  border: 1px solid #f7e2e2;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
}

#card img {
  width: 100%;
  height: 350px;
  border-radius: 5px 5px 0 0;
}

#card h1 {
  margin-left: 40px;
  font-size: 24px;
  font-weight: bold;
}

#card p {
  margin-left: 40px;
  font-size: 16px;
}

/* FOOTER */
.footer-body {
  width: 100%;
  text-align: center;
  display: inline-block;
  padding-top: 10px;

  background-color: #ffffff;
  box-shadow: 10px 10px 5px 12px rgba(58, 47, 47, 0.7);
}

#footer-left {
  float: left;
  text-align: left;
}

#footer-left h1 {
  color: #a32020;
}

#footer-left a {
  margin-left: 30px;
  text-decoration: none;
  font-weight: bold;
  color: black;
}

#footer-center {
  display: inline-block;
  margin: 0 auto;
  text-align: left;
}

#footer-center i,p {
  display: inline;
}

#footer-center p, #footer-right p {
  font-weight: bold;
}

#footer-right {
  margin-right: 30px;
  float: right;
  text-align: left;
}

#footer-right a {
  font-size: 50px;
  color: #a32020;
  margin: 10px;
  text-decoration: none;
}

#footer-left, #footer-center, #footer-right {
  display: inline-block;
  text-align: center;
  margin-bottom: 20px;
}


/* OFFERS PAGE */
#mountain-section, #sea-section, #city-section{
  width: 90%;
  margin: auto;
  position: relative;
  background-color: #f7e2e2;
  border-radius: 5px;
  box-shadow: 0 1px 5px rgba(58, 47, 47, 0.7);
}

#cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 40px;
  margin-bottom: 40px;
}

#card {
  width: 300px;
  height: 348px;
  margin: 20px;
  border: 1px solid #f7e2e2;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
  background-color: #ffffff;
}

#card img {
  width: 100%;
  height: 200px;
  border-radius: 5px 5px 0 0;
  display: flex;
}

#card-text {
  margin-top: 10px;
  text-align: left;
  color: black;
  margin-left: 5px;
}

#card-text a {
  color: black;
  text-decoration: none;
}

#card-text span {
  text-decoration: none;
  text-align: left;
  color: black;
  font-size: 12px;
}

#card-text i {
  color: #a32020;
  text-decoration: none;
  text-align: left;
  font-size: 15px;
  margin: 2px;
}

#card-text p {
  color: black;
  font-size: 15px;
}

#card-text button {
  background-color: #20A3A3;
  color: #f7e2e2;
  font-size: 12px;
  float: right;
  margin-right: 5px;
  margin-bottom: 10px;

  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 4px;
  padding-right: 4px;
  
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(58, 47, 47, 0.7);
}

